--- a/7/k.ipynb
+++ b/7/k.ipynb
@@ -1586,6 +1586,8 @@
         "                   2065,1720,1451,1277,1135,962,846,720))\n",
         "plot(df$x,df$y,ylim=c(0,25000),xlim=c(0,500),\n",
         "     xlab='aika [s]',ylab='Pulssimäärä')\n",
+        "#\n",
+        "# nlsr::nlxb is recommended replacement for nls\n",
         "fit1 <- nls(y~a1*exp(-l1*x)+a2*exp(-l2*x),start=list(a1=23000,l1=0.027,a2=5000,l2=0.005), data=df)\n",
         "a1<-coef(fit1)[\"a1\"]\n",
         "l1<-coef(fit1)[\"l1\"]\n",
@@ -1729,6 +1731,46 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# A=A0*exp(-l*t)\n",
+        "A0<-21\n",
+        "T12<-5730\n",
+        "l<-log(2)/T12\n",
+        "A=15\n",
+        "t=(log(A/A0))/-l\n",
+        "cat(sprintf(\"Näytteen ikä on %.0f vuotta.\\n\",t))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Näytteen ikä on 2781 vuotta.\n"
+          ]
+        }
+      ],
+      "execution_count": 208,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-15T17:12:08.728Z",
+          "iopub.execute_input": "2021-12-15T17:12:08.761Z",
+          "iopub.status.idle": "2021-12-15T17:12:08.857Z",
+          "shell.execute_reply": "2021-12-15T17:12:08.915Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "44\n",
@@ -1740,6 +1782,44 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "XY=234\n",
+        "cat(sprintf(\"%s%s%s\\n\", \n",
+        "            if(141+93==XY)\"a \" else \"\",\n",
+        "            if(156+97==XY)\"b \" else \"\",\n",
+        "            if(139+95==XY)\"c \" else \"\"))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a c \n"
+          ]
+        }
+      ],
+      "execution_count": 224,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-15T17:27:32.159Z",
+          "iopub.execute_input": "2021-12-15T17:27:32.192Z",
+          "iopub.status.idle": "2021-12-15T17:27:32.257Z",
+          "shell.execute_reply": "2021-12-15T17:27:32.287Z"
         }
       }
     },
@@ -1759,6 +1839,52 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "ms<-(2.0141018+3.0160493)*u\n",
+        "me<-4.0026033*u+mn\n",
+        "mh<-ms-me\n",
+        "m<-1#kg\n",
+        "N<-m/ms\n",
+        "E<-mh*c^2*N\n",
+        "cat(sprintf\n",
+        "    (\"Massahävikki=%.6f u, kilosta lähtöaineita saadaan %.1e J.\\n\",\n",
+        "     mh/u,E))\n",
+        "Ea<-1340e15#J\n",
+        "m<-Ea/E\n",
+        "cat(sprintf(\"Aineita olisi tarvittu %.0f kg.\\n\",m))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Massahävikki=0.018883 u, kilosta lähtöaineita saadaan 3.4e+14 J.\n",
+            "Aineita olisi tarvittu 3972 kg\n"
+          ]
+        }
+      ],
+      "execution_count": 230,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-15T17:38:10.047Z",
+          "iopub.execute_input": "2021-12-15T17:38:10.080Z",
+          "iopub.status.idle": "2021-12-15T17:38:10.297Z",
+          "shell.execute_reply": "2021-12-15T17:38:10.327Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "46\n",
@@ -1770,6 +1896,44 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "E1<-4e6*eV\n",
+        "E2<-3.3e6*eV\n",
+        "N=2e-3/(2.0141018*u)/2 # parien määrä\n",
+        "E=N/2*E1+N/2*E2\n",
+        "cat(sprintf(\"%.0f kWh.\\n\",E/3600e3))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "48570 kWh.\n"
+          ]
+        }
+      ],
+      "execution_count": 237,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-15T17:55:05.260Z",
+          "iopub.execute_input": "2021-12-15T17:55:05.295Z",
+          "iopub.status.idle": "2021-12-15T17:55:05.364Z",
+          "shell.execute_reply": "2021-12-15T17:55:05.397Z"
         }
       }
     },
@@ -1789,6 +1953,48 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# I=I0*exp(-µx), d=log(2)/µ\n",
+        "d=0.25#m\n",
+        "µ<-log(2)/d\n",
+        "x=0.75\n",
+        "cat(sprintf('a) %.1f %%.\\n',100*exp(-µ*x)))\n",
+        "# I/I0 =0.001=exp(-µx)\n",
+        "x<-log(0.001)/-µ\n",
+        "cat(sprintf('b) Vesikerroksen paksuus on %.1f m.\\n',x))\n"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a) 12.5 %.\n",
+            "b) Vesikerroksen paksuus on 2.5 m.\n"
+          ]
+        }
+      ],
+      "execution_count": 242,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-15T18:37:25.208Z",
+          "iopub.execute_input": "2021-12-15T18:37:25.243Z",
+          "iopub.status.idle": "2021-12-15T18:37:25.339Z",
+          "shell.execute_reply": "2021-12-15T18:37:25.380Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "48\n",
@@ -1804,17 +2010,41 @@
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "49\n",
-        "\n",
-        "Kirjan vastaus: a) 3 b) 6.4 % c) 120 1/m"
+        "# I=I0*exp(-µx), d=log(2)/µ\n",
+        "d=0.012#m\n",
+        "µ<-log(2)/d\n",
+        "# I/I0 =0.05=exp(-µx)\n",
+        "x<-log(0.05)/-µ\n",
+        "cat(sprintf('Levyn paksuus on %.1f cm.\\n',x*100))"
       ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Levyn paksuus on 5.2 cm.\n"
+          ]
+        }
+      ],
+      "execution_count": 243,
       "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
         "nteract": {
           "transient": {
             "deleting": false
           }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-15T19:08:57.719Z",
+          "iopub.execute_input": "2021-12-15T19:08:57.763Z",
+          "iopub.status.idle": "2021-12-15T19:08:57.865Z",
+          "shell.execute_reply": "2021-12-15T19:08:57.903Z"
         }
       }
     },
@@ -1830,6 +2060,47 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# v=H0*d, jossa \n",
+        "# v on loittonemisnopeus\n",
+        "# H0 Hubblen vakio kirjan mukaan 22 km/s/Mly\n",
+        "# d on etäisyys\n",
+        "v=22e3# km/s\n",
+        "H0=22e3/(1e6*c*3600*24*365.25)#1/s käytössä on Juliaaninen vuosi\n",
+        "d=v/H0\n",
+        "cat(sprintf('Etäisyys on %.1e km.\\n',d)) "
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Etäisyys on 9.5e+21 km.\n"
+          ]
+        }
+      ],
+      "execution_count": 245,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-15T19:37:12.749Z",
+          "iopub.execute_input": "2021-12-15T19:37:12.805Z",
+          "iopub.status.idle": "2021-12-15T19:37:12.896Z",
+          "shell.execute_reply": "2021-12-15T19:37:12.940Z"
         }
       }
     },
