fy7 kertaus yo-tehtävät

--- a/7/k.ipynb
+++ b/7/k.ipynb
@@ -24,7 +24,7 @@
         "mn<-1.674927351e-27 # neutronin massa [kg]\n",
         "me<-9.10938e-31 # Elektronin massa [kg]\n",
         "ma<-4.001506179127*u # alfa hiukkasen massa [kg]\n",
-        "eV<-1.6021766e-19 # Elektorinivoltti\n",
+        "eV<-1.602176634e-19 # Elektorinivoltti / alkeisvaraus e\n",
         "sigma<-5.670374419e-8 # Stefan-Boltzman\n",
         "Rh<-1.0973731e7 # Rydbegin vakio vedylle\n",
         "H0<-22e-6# km/s/ly\n",
@@ -1906,18 +1906,18 @@
         "E2<-3.3e6*eV\n",
         "N=2e-3/(2.0141018*u)/2 # parien määrä\n",
         "E=N/2*E1+N/2*E2\n",
-        "cat(sprintf(\"%.0f kWh.\\n\",E/3600e3))"
+        "cat(sprintf(\"%.0f kWh.\\n\",signif(E/3600e3,2)))"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "48570 kWh.\n"
+            "49000 kWh.\n"
           ]
         }
       ],
-      "execution_count": 237,
+      "execution_count": 267,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -1930,10 +1930,10 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-12-15T17:55:05.260Z",
-          "iopub.execute_input": "2021-12-15T17:55:05.295Z",
-          "iopub.status.idle": "2021-12-15T17:55:05.364Z",
-          "shell.execute_reply": "2021-12-15T17:55:05.397Z"
+          "iopub.status.busy": "2021-12-16T18:07:34.549Z",
+          "iopub.execute_input": "2021-12-16T18:07:34.584Z",
+          "iopub.status.idle": "2021-12-16T18:07:34.670Z",
+          "shell.execute_reply": "2021-12-16T18:07:34.710Z"
         }
       }
     },
@@ -2120,6 +2120,47 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Näkyvän valon aallonpituus on 400-780 nm\n",
+        "q<-eV\n",
+        "U1<-2.2\n",
+        "l1<-280e-9\n",
+        "W0<-h*c/l1-q*U1\n",
+        "l2<-h*c/W0\n",
+        "cat(sprintf('Maksimi aallonpitus, jolla kenno toimii on %.0f nm.\\n'\n",
+        ",l2/1e-9)) "
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Maksimi aallonpitus, jolla kenno toimii on 556 nm.\n"
+          ]
+        }
+      ],
+      "execution_count": 246,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-16T17:13:08.642Z",
+          "iopub.execute_input": "2021-12-16T17:13:08.679Z",
+          "shell.execute_reply": "2021-12-16T17:13:08.785Z",
+          "iopub.status.idle": "2021-12-16T17:13:08.821Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "S2012/9\n",
@@ -2131,6 +2172,45 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m40<-0.0117e-2*0.12\n",
+        "N40<-m40/(38.962383*u)\n",
+        "T12<-1.28e9*3600*24*365.25\n",
+        "l<-log(2)/T12\n",
+        "A<-l*N40\n",
+        "cat(sprintf('Aktiivisuus on %.1f kBq.\\n',A/1e3)) "
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aktiivisuus on 3.7 kBq.\n"
+          ]
+        }
+      ],
+      "execution_count": 247,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-16T17:25:38.114Z",
+          "iopub.execute_input": "2021-12-16T17:25:38.149Z",
+          "iopub.status.idle": "2021-12-16T17:25:38.224Z",
+          "shell.execute_reply": "2021-12-16T17:25:38.286Z"
         }
       }
     },
@@ -2150,6 +2230,46 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# N/N0=exp(-lt)\n",
+        "T12<-5730#a\n",
+        "l<-log(2)/T12\n",
+        "N=6.7e-13/1.2e-12\n",
+        "N0=1\n",
+        "t<-log(N/N0)/-l\n",
+        "cat(sprintf('Muumion ikä on %.0f vuotta.\\n',signif(t,2)))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Muumion ikä on 4800 vuotta.\n"
+          ]
+        }
+      ],
+      "execution_count": 266,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-16T18:06:58.474Z",
+          "iopub.execute_input": "2021-12-16T18:06:58.510Z",
+          "iopub.status.idle": "2021-12-16T18:06:58.696Z",
+          "shell.execute_reply": "2021-12-16T18:06:58.741Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "K2016/9\n",
@@ -2165,17 +2285,97 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "T12=109.77#min\n",
+        "l<-log(2)/T12\n",
+        "N=250#MBq\n",
+        "t=45#min\n",
+        "N0=N/exp(-l*t)\n",
+        "cat(sprintf('Aktiivisuus on %.0f MBq.\\n',signif(N0,2)))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aktiivisuus on 330 MBq.\n"
+          ]
+        }
+      ],
+      "execution_count": 264,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-16T18:05:34.939Z",
+          "iopub.execute_input": "2021-12-16T18:05:34.974Z",
+          "iopub.status.idle": "2021-12-16T18:05:35.054Z",
+          "shell.execute_reply": "2021-12-16T18:05:35.088Z"
+        }
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "S2005/9\n",
         "\n",
-        "Kirjan vastaus: a) 21 kV b) kuparia"
+        "Kirjan vastaus: a) 21 kV b) kuparia (Z=29)"
       ],
       "metadata": {
         "nteract": {
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l<-60e-12 # min\n",
+        "U<-h*c/(eV*l)\n",
+        "cat(sprintf('Kiihdytysjännite on %.0f kV.\\n',U/1e3))\n",
+        "l<-154e-12 # alfa-peak\n",
+        "f<-c/l\n",
+        "Z<-sqrt(f/2.48e15)+1\n",
+        "cat(sprintf('Z on %d.\\n',round(Z,0)))"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kiihdytysjännite on 21 kV.\n",
+            "Z on 29.\n"
+          ]
+        }
+      ],
+      "execution_count": 263,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-12-16T18:03:26.478Z",
+          "iopub.execute_input": "2021-12-16T18:03:26.516Z",
+          "iopub.status.idle": "2021-12-16T18:03:26.619Z",
+          "shell.execute_reply": "2021-12-16T18:03:26.654Z"
         }
       }
     }
